--- a/ToolBar5/app/src/main/res/layout/activity_main.xml
+++ b/ToolBar5/app/src/main/res/layout/activity_main.xml
@@ -10,32 +10,32 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent" >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center">
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center">-->
 
-            <Button
-                android:id="@+id/btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="add" />
+            <!--<Button-->
+                <!--android:id="@+id/btn"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="add" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center_vertical"
-                android:text="标题"
-                android:textSize="18sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_centerInParent="true"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:text="标题"-->
+                <!--android:textSize="18sp" />-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/abc_ic_menu_share_mtrl_alpha" />
+            <!--<ImageView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:background="@drawable/abc_ic_menu_share_mtrl_alpha" />-->
 
-        </RelativeLayout>
+        <!--</RelativeLayout>-->
     </android.support.v7.widget.Toolbar>
 
 </RelativeLayout>
