--- a/ToolBar5/androidnewfeature/src/main/res/layout/activity_collapsing_toolbar.xml
+++ b/ToolBar5/androidnewfeature/src/main/res/layout/activity_collapsing_toolbar.xml
@@ -5,35 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="fm.mow.com.androidnewfeature.MainActivity">
+    tools:context="fm.mow.com.androidnewfeature.CollapsingToolbarActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            app:layout_scrollFlags="scroll|enterAlways"
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-
-        <android.support.design.widget.TabLayout
-
-            android:id="@+id/tl"
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/ctl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="#FFFF0000"
-            app:tabSelectedTextColor="#FF0000FF"
-            app:tabTextColor="#FFFFFFFF"
-            app:tabMode="scrollable"
-            app:tabGravity="fill"/>
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/banner"
+                app:layout_collapseMode="parallax" />
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
+        </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_collapsing_toolbar" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
