--- a/ToolBar5/androidnewfeature/src/main/res/layout/content_collapsing_toolbar.xml
+++ b/ToolBar5/androidnewfeature/src/main/res/layout/content_collapsing_toolbar.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="fm.mow.com.androidnewfeature.CollapsingToolbarActivity"
+    tools:context="newfeature.activity.CollapsingToolbarActivity"
     tools:showIn="@layout/activity_collapsing_toolbar">
 
 </RelativeLayout>
