--- a/ToolBar5/androidnewfeature/src/main/res/layout/content_main.xml
+++ b/ToolBar5/androidnewfeature/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="fm.mow.com.androidnewfeature.MainActivity"
+    tools:context="newfeature.activity.MainActivity"
     tools:showIn="@layout/activity_main">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
