--- a/ToolBar5/androidnewfeature/src/main/res/layout/content_tab_layout.xml
+++ b/ToolBar5/androidnewfeature/src/main/res/layout/content_tab_layout.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.MainActivity"
+    tools:context=".activity.NewMainActivity"
     tools:showIn="@layout/activity_tab_layout">
 
     <android.support.design.widget.TabLayout
