--- a/androidnewfeature/src/main/res/layout/activity_tab_layout.xml
+++ b/androidnewfeature/src/main/res/layout/activity_tab_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="newfeature.activity.NewMainActivity">
+    tools:context="newfeature.activity.TabLayoutActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,27 +13,15 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            app:layout_scrollFlags="scroll|enterAlways"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-
-        <android.support.design.widget.TabLayout
-
-            android:id="@+id/tl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabIndicatorColor="#FFFF0000"
-            app:tabSelectedTextColor="#FF0000FF"
-            app:tabTextColor="#FFFFFFFF"
-            app:tabMode="scrollable"
-            app:tabGravity="fill"/>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_tab_layout" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
