--- a/androidnewfeature/src/main/res/layout/content_tab_layout_frament.xml
+++ b/androidnewfeature/src/main/res/layout/content_tab_layout_frament.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.NewMainActivity"
+    tools:context=".activity.MainActivity"
     tools:showIn="@layout/activity_tab_layout_frament">
 
     <android.support.design.widget.TabLayout
