--- a/ToolBar5/app/src/main/res/layout/activity_main.xml
+++ b/ToolBar5/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,8 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/simple_navigation_drawer"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
     <!--内容视图-->
@@ -11,12 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--左侧滑菜单栏-->
-    <include
-        layout="@layout/drawer_menu_layout"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
+    <!--&lt;!&ndash;左侧滑菜单栏&ndash;&gt;-->
+    <!--<include-->
+        <!--layout="@layout/drawer_menu_layout"-->
+        <!--android:layout_width="250dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start" />-->
 
     <!--右侧滑菜单栏-->
     <!--<include-->
@@ -24,5 +26,13 @@
     <!--android:layout_width="250dp"-->
     <!--android:layout_height="match_parent"-->
     <!--android:layout_gravity="end" />-->
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"
+        app:menu="@menu/drawer" />
 </android.support.v4.widget.DrawerLayout>
 
