--- a/ToolBar5/app/src/main/res/layout/content_appbar_tablayout.xml
+++ b/ToolBar5/app/src/main/res/layout/content_appbar_tablayout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_appbar_tablayout">
+    tools:showIn="@layout/activity_appbar_tablayout"
+    >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
