--- a/ToolBar5/app/src/main/res/layout/drawer_content_layout.xml
+++ b/ToolBar5/app/src/main/res/layout/drawer_content_layout.xml
@@ -18,7 +18,8 @@
         android:text="主页" />
     <!--内容显示布局-->
     <FrameLayout
-        android:id="@+id/frame_content"
+        android:layout_below="@id/toolbar"
+        android:id="@+id/flContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
