--- a/ToolBar5/app/src/main/res/layout/content_collapsing_toolbar.xml
+++ b/ToolBar5/app/src/main/res/layout/content_collapsing_toolbar.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_collapsing_toolbar">
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -104,5 +104,5 @@
                 android:padding="50dp"
                 android:text="Loader最帅" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
