--- a/ToolBar5/app/src/main/res/layout/fragment_page.xml
+++ b/ToolBar5/app/src/main/res/layout/fragment_page.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -100,7 +100,7 @@
                 android:padding="50dp"
                 android:text="Loader最帅" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <TextView
         android:id="@+id/textView"
