--- a/ToolBar5/app/src/main/res/layout/activity_main.xml
+++ b/ToolBar5/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/simple_navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,5 +24,5 @@
     <!--android:layout_width="250dp"-->
     <!--android:layout_height="match_parent"-->
     <!--android:layout_gravity="end" />-->
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 
