--- a/ToolBar5/app/src/main/res/layout/content_appbar_tablayout.xml
+++ b/ToolBar5/app/src/main/res/layout/content_appbar_tablayout.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_appbar_tablayout">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
